--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,5 @@
 <h3><span style="font-weight: 400;">Pocket Scan Privacy Policy</span></h3>
-<h3><span style="font-weight: 400;">The following information applies to the Pocket Scanner app.</span></h3>
+<h3><span style="font-weight: 400;">The following information applies to the Pocket Scan app.</span></h3>
 <p><span style="font-weight: 400;">This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</span></p>
 <p>&nbsp;</p>
 <p><span style="font-weight: 400;">If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</span></p>
